force-app/main/default/objects/WorkOrder/fields/Activity_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Activity_Instructions__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <label>Activity Instructions</label>
    <length>130999</length>
    <type>LongTextArea</type>
</CustomField>