force-app/main/default/objects/WorkOrder/fields/Actual_water_off_time__c.field-meta.xml
<CustomField>
    <fullName>Actual_water_off_time__c</fullName>
    <label>Actual water off time</label>
    <type>DateTime</type>
</CustomField>