force-app/main/default/objects/WorkOrder/fields/Address_for_impacted_dialysis_patient__c.field-meta.xml
<CustomField>
    <fullName>Address_for_impacted_dialysis_patient__c</fullName>
    <label>Address for impacted dialysis patient</label>
    <length>130999</length>
    <type>LongTextArea</type>
</CustomField>