force-app/main/default/objects/WorkOrder/fields/Address_for_impacted_key_customer__c.field-meta.xml
<CustomField>
    <fullName>Address_for_impacted_key_customer__c</fullName>
    <label>Address for impacted key customer</label>
    <length>130999</length>
    <type>LongTextArea</type>
</CustomField>