force-app/main/default/objects/WorkOrder/fields/Care_or_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Care_or_Commercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care or Commercial</label>
    <type>Checkbox</type>
</CustomField>