force-app/main/default/objects/WorkOrder/fields/Contact_number_for_dialysis_patient__c.field-meta.xml
<CustomField>
    <fullName>Contact_number_for_dialysis_patient__c</fullName>
    <label>Contact number for dialysis patient</label>
    <length>50</length>
    <type>Text</type>
</CustomField>