force-app/main/default/objects/WorkOrder/fields/Contact_number_for_key_customer__c.field-meta.xml
<CustomField>
    <fullName>Contact_number_for_key_customer__c</fullName>
    <label>Contact number for key customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>