force-app/main/default/objects/WorkOrder/fields/Customer_notified_Yes_or_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_notified_Yes_or_No__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(TEXT(Has_the_customer_been_notified__c), &quot;true&quot;, &quot;Yes&quot;) , &quot;false&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer notified Yes or No</label>
    <type>Text</type>
</CustomField>