force-app/main/default/objects/WorkOrder/fields/Dialysis_Patient__c.field-meta.xml
<CustomField>
    <fullName>Dialysis_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <label>Dialysis Patient</label>
    <type>Checkbox</type>
</CustomField>