force-app/main/default/objects/WorkOrder/fields/EAM_Work_Order_Complete__c.field-meta.xml
<CustomField>
    <fullName>EAM_Work_Order_Complete__c</fullName>
    <label>EAM Work Order Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>