force-app/main/default/objects/WorkOrder/fields/EAM_Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>EAM_Work_Order_Status__c</fullName>
    <description>work order status from EAM</description>
    <label>EAM Work Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>