force-app/main/default/objects/WorkOrder/fields/Estimated_Water_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Water_Off_Time__c</fullName>
    <label>Estimated Water Off Time</label>
    <type>DateTime</type>
</CustomField>