force-app/main/default/objects/WorkOrder/fields/Estimated_Water_On__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Water_On__c</fullName>
    <label>Estimated Water On Time</label>
    <type>DateTime</type>
</CustomField>