force-app/main/default/objects/WorkOrder/fields/Flat__c.field-meta.xml
<CustomField>
    <fullName>Flat__c</fullName>
    <description>Created for unit/apartment address as the standard address field don&apos;t accept the unit/apartment number. Ex- Unit1E/4 St Paul street.</description>
    <label>Flat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>