force-app/main/default/objects/WorkOrder/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <label>Group Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>