force-app/main/default/objects/WorkOrder/fields/Has_the_customer_been_notified__c.field-meta.xml
<CustomField>
    <fullName>Has_the_customer_been_notified__c</fullName>
    <label>Has the customer been notified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>