force-app/main/default/objects/WorkOrder/fields/Has_the_service_been_restored__c.field-meta.xml
<CustomField>
    <fullName>Has_the_service_been_restored__c</fullName>
    <label>Has the service been restored?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>