force-app/main/default/objects/WorkOrder/fields/How_many_properties_are_impacted__c.field-meta.xml
<CustomField>
    <fullName>How_many_properties_are_impacted__c</fullName>
    <label>How many properties are impacted?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>