force-app/main/default/objects/WorkOrder/fields/Impact_Assessment_Done__c.field-meta.xml
<CustomField>
    <fullName>Impact_Assessment_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impact Assessment Done</label>
    <type>Checkbox</type>
</CustomField>