force-app/main/default/objects/WorkOrder/fields/Insufficient_Part_Inventory_in_EAM__c.field-meta.xml
<CustomField>
    <fullName>Insufficient_Part_Inventory_in_EAM__c</fullName>
    <description>Some parts not issued due to insufficient inventory in EAM</description>
    <label>Insufficient Part Inventory in EAM</label>
    <summaryFilterItems>
        <field>ProductConsumed.Not_Sufficient_EAM_Stock__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ProductConsumed.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>