force-app/main/default/objects/WorkOrder/fields/Is_it_a_RAR__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_RAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is it a RAR</label>
    <type>Checkbox</type>
</CustomField>