force-app/main/default/objects/WorkOrder/fields/Is_it_a_redo_for_reinstatement__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_redo_for_reinstatement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the reinstatement job is completed before and this is a redo for the same job at the same address</description>
    <inlineHelpText>If the reinstatement job is completed before and this is a redo for the same job at the same address, please tick the checkbox</inlineHelpText>
    <label>Is it a redo for reinstatement</label>
    <type>Checkbox</type>
</CustomField>