force-app/main/default/objects/WorkOrder/fields/Is_Reinstatement__c.field-meta.xml
<CustomField>
    <fullName>Is_Reinstatement__c</fullName>
    <formula>WorkType.MSN_Reinstatement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reinstatement</label>
    <type>Checkbox</type>
</CustomField>