force-app/main/default/objects/WorkOrder/fields/JSA_Required__c.field-meta.xml
<CustomField>
    <fullName>JSA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will confirm if job safety analysis is required or not. If the checkbox is true this means the job safety analysis is required for the job</description>
    <label>JSA Required</label>
    <type>Checkbox</type>
</CustomField>