force-app/main/default/objects/WorkOrder/fields/JSA_Status__c.field-meta.xml
<CustomField>
    <fullName>JSA_Status__c</fullName>
    <description>Job safety analysis status</description>
    <label>JSA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>