force-app/main/default/objects/WorkOrder/fields/JSA_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>JSA_Submitted_Date__c</fullName>
    <description>Job safety analysis submitted date</description>
    <label>JSA Submitted Date</label>
    <type>Date</type>
</CustomField>