force-app/main/default/objects/WorkOrder/fields/Key_Customer__c.field-meta.xml
<CustomField>
    <fullName>Key_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <label>Key Customer</label>
    <type>Checkbox</type>
</CustomField>