force-app/main/default/objects/WorkOrder/fields/Labour_Hours_exceed_max_expected_hours__c.field-meta.xml
<CustomField>
    <fullName>Labour_Hours_exceed_max_expected_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Labour Hours exceed max expected hours</label>
    <type>Checkbox</type>
</CustomField>