force-app/main/default/objects/WorkOrder/fields/Letter_drop_status__c.field-meta.xml
<CustomField>
    <fullName>Letter_drop_status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://miro.com/app/board/o9J_llpGbuQ=/</description>
    <label>Letter drop status</label>
    <type>Checkbox</type>
</CustomField>