force-app/main/default/objects/WorkOrder/fields/Missing_Parts__c.field-meta.xml
<CustomField>
    <fullName>Missing_Parts__c</fullName>
    <formula>IF((Parts_Missing__c &gt; 0) &amp;&amp; ISPICKVAL(Status, &apos;Ready for Review&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Parts</label>
    <type>Checkbox</type>
</CustomField>