force-app/main/default/objects/WorkOrder/fields/MSN_Access_Issues__c.field-meta.xml
<CustomField>
    <fullName>MSN_Access_Issues__c</fullName>
    <description>Selection list of access problems</description>
    <label>Access Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locked Gate</fullName>
            </value>
            <value>
                <fullName>Sensitive Customer</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>No Parking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>