force-app/main/default/objects/WorkOrder/fields/MSN_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>MSN_Contact_Email__c</fullName>
    <description>email from EAM</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>