force-app/main/default/objects/WorkOrder/fields/MSN_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_Contact_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>