force-app/main/default/objects/WorkOrder/fields/MSN_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_Contact_Last_Name__c</fullName>
    <description>contact last name from EAM</description>
    <label>Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>