force-app/main/default/objects/WorkOrder/fields/MSN_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>MSN_Contact_Phone__c</fullName>
    <description>Phone number from EAM</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>