force-app/main/default/objects/WorkOrder/fields/MSN_Contact_Requestor__c.field-meta.xml
<CustomField>
    <fullName>MSN_Contact_Requestor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>contact requestor from EAM</description>
    <label>Contact Requestor</label>
    <type>Checkbox</type>
</CustomField>