force-app/main/default/objects/WorkOrder/fields/MSN_Contract__c.field-meta.xml
<CustomField>
    <fullName>MSN_Contract__c</fullName>
    <label>Contract</label>
    <length>20</length>
    <type>Text</type>
</CustomField>