force-app/main/default/objects/WorkOrder/fields/MSN_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MSN_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>