force-app/main/default/objects/WorkOrder/fields/MSN_Fault_Location__c.field-meta.xml
<CustomField>
    <fullName>MSN_Fault_Location__c</fullName>
    <description>location for reactive work order from EAM</description>
    <label>Fault Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>