force-app/main/default/objects/WorkOrder/fields/MSN_Hard_Material_Volume__c.field-meta.xml
<CustomField>
    <fullName>MSN_Hard_Material_Volume__c</fullName>
    <description>Calculated reinstatement material volume for hard surface reinstatement in m³ . The Calculation is made from the entered Surface Length, Depth, Width that has been entered by the Reinstatement Markout Crew</description>
    <formula>MSN_Reinstatement_Surface_Length__c * MSN_Reinstatement_Surface_Width__c * MSN_Reinstatement_Surface_Depth__c</formula>
    <inlineHelpText>Approx. required hard surface material in cubic meters (m³)</inlineHelpText>
    <label>Hard Material Volume (m³)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>