force-app/main/default/objects/WorkOrder/fields/MSN_Hydro_Excavator_Required__c.field-meta.xml
<CustomField>
    <fullName>MSN_Hydro_Excavator_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Job Coordinators for planning purposes on a Work Order. Can be edited directly from a list view or report without having to open up the individual record.</description>
    <label>Hydro Excavator Required?</label>
    <type>Checkbox</type>
</CustomField>