force-app/main/default/objects/WorkOrder/fields/MSN_ImportantCustomerDetails__c.field-meta.xml
<CustomField>
    <fullName>MSN_ImportantCustomerDetails__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-85
Check if it is a dialysis patient or key account</description>
    <formula>IF( (Dialysis_Patient__c  &amp;&amp;  Key_Customer__c   =  True), &quot;Dialysis Patient/Key Customer&quot;,
IF( (Dialysis_Patient__c  = True), &quot;Dialysis Patient&quot;,
IF( (Dialysis_Patient__c  &amp;&amp;  Key_Customer__c   =  False), &quot;&quot;,
IF( (Key_Customer__c  = True), &quot;Key Customer&quot;, &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Details</label>
    <type>Text</type>
</CustomField>