force-app/main/default/objects/WorkOrder/fields/MSN_JC_Comments__c.field-meta.xml
<CustomField>
    <fullName>MSN_JC_Comments__c</fullName>
    <description>Used by Job Coordinators for planning purposes on a Work Order. Can be edited directly from a listview or report without having to open up the individual record.</description>
    <label>JC Comments</label>
    <type>TextArea</type>
</CustomField>