force-app/main/default/objects/WorkOrder/fields/MSN_Job_Audited__c.field-meta.xml
<CustomField>
    <fullName>MSN_Job_Audited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Job Coordinators / Planners to indicate that a planned maintenance job has been audited. Can be edited directly from a list view or report without having to open up the individual record.</description>
    <label>Audited</label>
    <type>Checkbox</type>
</CustomField>