force-app/main/default/objects/WorkOrder/fields/MSN_Job_Notes__c.field-meta.xml
<CustomField>
    <fullName>MSN_Job_Notes__c</fullName>
    <description>Concatenated Job Notes field from all WorkOrder related items in the MSN_JobNotes__c object</description>
    <label>MSN Job Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>