force-app/main/default/objects/WorkOrder/fields/MSN_Reinstatement_BoxingRequired__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_BoxingRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Job Coordinators to indicate, whether a &quot;Custom Box&quot; is required e.g. for a meter replacement job</description>
    <label>Custom Box Required?</label>
    <type>Checkbox</type>
</CustomField>