force-app/main/default/objects/WorkOrder/fields/MSN_Reinstatement_LetterdropRequired__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_LetterdropRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that a &quot;Letterdrop&quot; is required for a Reinstatement Job. This might be selected by the mark out crew when they define the reinstatement scope from the Mobile app in the flow &quot;Define Reinstatement Scope&quot; (launched from &quot;Work Done&quot;).</description>
    <label>Letterdrop required?</label>
    <type>Checkbox</type>
</CustomField>