force-app/main/default/objects/WorkOrder/fields/MSN_Reinstatement_Markout_Complete__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_Markout_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for validation purposes in the field service mobile flow &quot;Update Job Status&quot; to determine whether the markout crew already has entered the required details for a hard surface reinstatement job.</description>
    <label>Reinstatement Markout Complete</label>
    <type>Checkbox</type>
</CustomField>