force-app/main/default/objects/WorkOrder/fields/MSN_Reinstatement_NoParkers__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_NoParkers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that &quot;No Parkers&quot; are required for a Reinstatement Job. This might be selected by the mark out crew when they define the reinstatement scope from the Mobile app in the flow &quot;Define Reinstatement Scope&quot; (launched from &quot;Work Done&quot;).</description>
    <label>No Parkers Required?</label>
    <type>Checkbox</type>
</CustomField>