force-app/main/default/objects/WorkOrder/fields/MSN_Reinstatement_Notes__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_Notes__c</fullName>
    <description>Used by Field Crew during the &quot;Request Reinstatement&quot; flow on the Field Service Mobile App to add more notes/details about a reinstatement request. This is also shown on the Work Order Layout for the Job Coordinator to pickup.</description>
    <label>Reinstatement Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>