force-app/main/default/objects/WorkOrder/fields/MSN_Reinstatement_ServiceHazards__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_ServiceHazards__c</fullName>
    <description>Used to store Service Hazards identified from the mobile field crew when Requesting Reinstatement from the Field Service Mobile App.</description>
    <label>Service Hazards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shallow Telco</fullName>
            </value>
            <value>
                <fullName>Shallow Gas</fullName>
            </value>
            <value>
                <fullName>Shallow Electrical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>