force-app/main/default/objects/WorkOrder/fields/MSN_Reinstatement_Surface_Depth__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_Surface_Depth__c</fullName>
    <description>Used on Reinstatement Work Orders by Markout crew to record the required material depth for hard surfaces (e.g. concrete or hotmix.)</description>
    <inlineHelpText>Please enter the required reinstatement surface depth in meters.</inlineHelpText>
    <label>Surface Depth (m)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>