force-app/main/default/objects/WorkOrder/fields/MSN_Reinstatement_Surface_Length__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_Surface_Length__c</fullName>
    <description>Used on Reinstatement Work Orders by Markout crew to record the length of the hard surface needing reinstatement.</description>
    <inlineHelpText>Please enter the required reinstatement surface length in meters.</inlineHelpText>
    <label>Surface Length (m)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>