force-app/main/default/objects/WorkOrder/fields/MSN_Reinstatement_WorkSiteDetails__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_WorkSiteDetails__c</fullName>
    <description>This field is used to specify details about the work site where the Reinstatement Job is supposed to happen. This might be selected by the mark out crew when they define the reinstatement scope from the Mobile app in the flow &quot;Define Reinstatement Scope&quot; (launched from &quot;Work Done&quot;).</description>
    <label>Work Site Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driveway</fullName>
            </value>
            <value>
                <fullName>Footpath</fullName>
            </value>
            <value>
                <fullName>Carriageway/Road</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>