force-app/main/default/objects/WorkOrder/fields/MSN_Reintatement_BackfillRequired__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reintatement_BackfillRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that &quot;Backfill&quot; is required for a Reinstatement Job. This migh be selected by the field crew when they &quot;Request Reinstatement&quot; from the Mobile app in the feature &quot;Update Job Status&apos;.</description>
    <label>Backfill required?</label>
    <type>Checkbox</type>
</CustomField>