force-app/main/default/objects/WorkOrder/fields/MSN_Scheduling_Priority__c.field-meta.xml
<CustomField>
    <fullName>MSN_Scheduling_Priority__c</fullName>
    <formula>CASE(TEXT(Priority), &apos;P1&apos; , 1 ,&apos;P2&apos; ,2,&apos;P3&apos; ,3 , &apos;P4&apos;, 4, &apos;P5&apos;, 5, &apos;P6&apos;, 6, &apos;P7&apos;, 7, &apos;P8&apos;, 8, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSN Scheduling Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>