force-app/main/default/objects/WorkOrder/fields/MSN_Service_Restore_Required__c.field-meta.xml
<CustomField>
    <fullName>MSN_Service_Restore_Required__c</fullName>
    <description>Cross-object formula field that displays the information whether the Work Type of the Work Order requires a &quot;Service Restore&quot; before the mobile field crew is allowed to complete the job. This is validated in the Field Service Mobile App in the &quot;Update Job Status&quot; Flow.</description>
    <formula>WorkType.MSN_Service_Restore_Required__c</formula>
    <inlineHelpText>Inficates whether the Work Type of this  Work Order requires a &quot;Service Restore&quot; before the mobile field crew is allowed to complete the job.</inlineHelpText>
    <label>Service Restore Required</label>
    <type>Checkbox</type>
</CustomField>