force-app/main/default/objects/WorkOrder/fields/MSN_Service_Restored_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MSN_Service_Restored_Due_Date__c</fullName>
    <description>This is used to store the &quot;Service Restore Due Date&quot; from EAM, when a reactive work order is being created from EAM via the intergration. This is used as a KPI to determine by when the service has to be restored by and is used in reports etc.</description>
    <label>Service Restored Due Date</label>
    <type>DateTime</type>
</CustomField>