force-app/main/default/objects/WorkOrder/fields/MSN_ServiceTerritory_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_ServiceTerritory_Name__c</fullName>
    <description>This cross object formula is used to retrieve the Name of the Service Territory as a string in order to use it e.g. in the prepopulated mapping of &quot;Work Step Answers&quot; for &quot;Crew Id&quot; that otherwise would only return the Record ID of the Service Territory.</description>
    <formula>ServiceTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Territory - Name</label>
    <type>Text</type>
</CustomField>