force-app/main/default/objects/WorkOrder/fields/MSN_Steel_Plates_Required__c.field-meta.xml
<CustomField>
    <fullName>MSN_Steel_Plates_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used e.g. by Job Coordinators and Reinstatement Markout crew members to indicate, whether &quot;Steel Plates&quot; are required on a Reinstatement job. This field also is referenced by the flows &quot;Reinstatement - Markout&quot; and &quot;Create Reinstatement Jobs&quot;.</description>
    <label>Steel Plates Required?</label>
    <type>Checkbox</type>
</CustomField>