force-app/main/default/objects/WorkOrder/fields/MSN_Taken_By__c.field-meta.xml
<CustomField>
    <fullName>MSN_Taken_By__c</fullName>
    <description>calltakenby from EAM</description>
    <label>Taken By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>