force-app/main/default/objects/WorkOrder/fields/MSN_Time_to_Service_Restore__c.field-meta.xml
<CustomField>
    <fullName>MSN_Time_to_Service_Restore__c</fullName>
    <description>Used for KPI Reporting. Calculates the time (in hours) between &quot;Created Date&quot; of the work order and the datetime field &quot;Service Restored&quot;</description>
    <formula>(Service_Restored_Date_and_Time__c -  CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Service Restore (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>