force-app/main/default/objects/WorkOrder/fields/MSN_Total_WaterOff_Duration__c.field-meta.xml
<CustomField>
    <fullName>MSN_Total_WaterOff_Duration__c</fullName>
    <description>This calculates the total duration water has been switched off on a job. This is used for KPI reporting e.g. if water has been turned off longer than 5 or respectively 8 hours.</description>
    <formula>( Actual_water_on_time__c - Actual_water_off_time__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Water Off time (in minutes)</inlineHelpText>
    <label>Total Water Off Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>