force-app/main/default/objects/WorkOrder/fields/MSN_TrafficControl_Level__c.field-meta.xml
<CustomField>
    <fullName>MSN_TrafficControl_Level__c</fullName>
    <description>Used on Traffic Control Work Orders to specify the required TC Level.</description>
    <label>Traffic Control Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>