force-app/main/default/objects/WorkOrder/fields/MSN_TrafficControl_Notes__c.field-meta.xml
<CustomField>
    <fullName>MSN_TrafficControl_Notes__c</fullName>
    <description>Used by Markout Crew during the &quot;Define Reinstatement Scope&quot; flow on the Field Service Mobile App to add more notes/details about a requested Traffic Control. This is also shown on the Work Order Layout for the Job Coordinator to pickup.</description>
    <label>Notes for Traffic Control</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>