force-app/main/default/objects/WorkOrder/fields/MSN_TrafficControl_Required__c.field-meta.xml
<CustomField>
    <fullName>MSN_TrafficControl_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that &quot;Traffic Control&quot; is required for a Reinstatement Job. This might be selected by the mark out crew when they define the reinstatement scope from the Mobile app in the flow &quot;Define Reinstatement Scope&quot; (launched from &quot;Work Done&quot;).</description>
    <label>Traffic Control Required?</label>
    <type>Checkbox</type>
</CustomField>