force-app/main/default/objects/WorkOrder/fields/MSN_Truck_Required__c.field-meta.xml
<CustomField>
    <fullName>MSN_Truck_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a &quot;Truck is required&quot; for a Work Order as prerequisite. This might be selected by the job coordinator when e.g. a certain job such as a planned meter replacement needs concrete breakup or any other prerequisite that requires special equipment only available on trucks.</description>
    <inlineHelpText>Tick if the job requires a truck - e.g. for a concrete breakup.</inlineHelpText>
    <label>Truck required?</label>
    <type>Checkbox</type>
</CustomField>