force-app/main/default/objects/WorkOrder/fields/MSN_Two_Person_Job__c.field-meta.xml
<CustomField>
    <fullName>MSN_Two_Person_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Job Coordinators for planning purposes on a Work Order. Can be edited directly from a list view or report without having to open up the individual record.</description>
    <label>Two Person Job?</label>
    <type>Checkbox</type>
</CustomField>