force-app/main/default/objects/WorkOrder/fields/MSN_WaterShutdown_Approved__c.field-meta.xml
<CustomField>
    <fullName>MSN_WaterShutdown_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Job Coordinators / Planners to indicate that a &quot;Shutdown&quot; has been approved for planned water work. Can be edited directly from a list view or report without having to open up the individual record.</description>
    <label>Shutdown Approved</label>
    <type>Checkbox</type>
</CustomField>